# 06_course_work

./: README.md  data.json  data_users.json  data_vlog.json  pyproject.toml
config/: settings.py  urls.py
mailing_list/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_list/management/: __init__.py
mailing_list/migrations/: 0001_initial.py  0002_client_created_client_is_active.py  0002_rename_mailinglistsettings_mailinglist.py  0003_alter_client_created.py  0004_alter_client_created.py  0005_alter_client_options.py  0006_rename_created_mailinglistmessage_created_time.py  0007_mailinglist_created.py  0008_mailinglistmessage_created.py
mailing_list/templates/mailing_list/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailinglist_form.html  mailinglist_list.html  mailinglistmessage_detail.html  mailinglistmessage_form.html  mailinglistmessage_list.html
mailing_list/templates/mailing_list/includes/: client_card.html  inc_catalog_head.html  inc_mailing_list_card.html  inc_mailing_list_message_card.html  mailing_list_message_card.html
users/: forms.py  models.py  services.py  views.py
users/migrations/: 0001_initial.py
vlog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
vlog/migrations/: 0001_initial.py
vlog/templates/vlog/: record_form.html  record_list.html
